--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -35,7 +35,7 @@ jobs:
     - uses: mr-smithers-excellent/docker-build-push@v6
       name: Build & push Docker image
       with:
-        image: princeyadav09/new_img
+        image: princeyadav09/new_img1
         tags: v1, latest
         registry: docker.io
         dockerfile: Dockerfile
